--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -536,7 +536,8 @@ a {
             letter-spacing: 0px;
             color: var(--text);
             max-width: 65%;
-            // white-space: pre-line;
+            white-space: pre-line;
+            word-wrap: break-word;
 
             @media all and (max-width: 1000px) {
               font: normal normal normal 0.8em Poppins;
