--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -297,16 +297,16 @@ a {
   }
 
   @media all and (max-width: 600px) {
-    height: calc(90vh - 50px);
+    height: calc(80vh - 50px);
     background: #282a37a9 0% 0% no-repeat padding-box;
     // background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 4px solid #00000011;
     // backdrop-filter: blur(10px);
   }
 
-  // @media all and (max-width: 420px) {
-  //   height: calc(78vh - 50px);
-  // }
+  @media all and (max-width: 420px) {
+    height: calc(85vh - 50px);
+  }
 
   .chat_side_struct {
     display: block;
