--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -279,6 +279,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   height: 100%;
   width: 50%;
   background: #282a378f 0% 0% no-repeat padding-box;
